enum TankState{
    LLENADO, VACIADO, DETENIDO;
}

public class Tanque {
    private String Id;
    private double capacidadMaxima;
    private double nivelActual;
}


